--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "antd": "^5.11.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.7",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
