--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "chart.js": "^4.4.7",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
