--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/jspdf": "^2.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
